--- a/static/css/tracing.css
+++ b/static/css/tracing.css
@@ -448,7 +448,7 @@ a.warn-box-anchor {
     padding-bottom: 40px;
     overflow: auto; 
     width: 100%;
-    height: 85vh; 
+    height: 50vh; 
 }
 
 .back-to-search-traces{
@@ -551,7 +551,7 @@ circle:hover{
     border-radius: 10px;
     padding-bottom: 40px;
     overflow: auto;
-    height: 85vh;
+    height: 50vh;
     padding: 20px;
     margin-left: 10px;
     min-width: 450px;
@@ -572,4 +572,19 @@ circle:hover{
 .details-container table th,.details-container table td{
     border: 1px solid var(--timepicker-hr-color);
     padding: 8px;
+}
+
+.logs-metrics-container{
+    margin-top: 14px;
+    box-shadow: var(--box-shadow);
+    background-color: var(--black1-to-white0);
+    border: 1px solid var(--search-input-border);
+    border-radius: 10px;
+    padding-bottom: 40px;
+    overflow: auto;
+    height: 33vh;
+    padding: 10px;
+}
+.logs-metrics-container .section-button{
+    cursor: pointer;
 }
