--- a/static/css/metrics-explorer.css
+++ b/static/css/metrics-explorer.css
@@ -91,7 +91,7 @@ input:checked + .slider:before {
     margin-bottom: 4px;
     margin-right: 6px;
 }
-.metrics-query{
+.metrics-query,.formula-box{
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -102,20 +102,20 @@ input:checked + .slider:before {
     flex-wrap: wrap;
 }
 
-.metrics-query input{
+.metrics-query input,.formula-box input{
     color: var(--text-color) !important;
     outline: none;
     border-radius: 0;
 }
 
-.metrics-query .formula{
+.formula-box .formula{
     width: 200px;
     border-radius: 0 5px 5px 0;
 }
-.metrics-query .formula:focus{
+.formula-box .formula:focus{
     border-radius: 0 5px 5px 0;
 }
-.metrics-query .formula.error-border{
+.formula-box .formula.error-border{
     border: 1px solid #EB364B;
     border-left: none ;
 }
@@ -221,7 +221,7 @@ input:checked + .slider:before {
     background-color: var(--drop-down-btn-bg-regular);
 }
 
-.metrics-query .remove-query{
+.metrics-query .remove-query, .formula-box .remove-query{
     border-radius: 18px;
     height: 18px;
     width: 18px;
@@ -235,8 +235,15 @@ input:checked + .slider:before {
     background: #656F76;
     font-weight: 600;
 }
-.metrics-query .remove-query:hover{
-    background: #FF0000;
+.metrics-query .remove-query.disabled,
+.metrics-query .remove-query.disabled:hover{
+    cursor: not-allowed;
+    background: #a0a4a6;
+}
+
+.metrics-query .remove-query:hover,
+.formula-box .remove-query:hover{
+    background: #EB364B;
     border-radius: 5px;
 }
 .metrics-graph-container {
