--- a/static/css/metrics-explorer.css
+++ b/static/css/metrics-explorer.css
@@ -91,7 +91,7 @@ input:checked + .slider:before {
     margin-bottom: 4px;
     margin-right: 6px;
 }
-.metrics-query{
+.metrics-query,.formula-box{
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -102,18 +102,25 @@ input:checked + .slider:before {
     flex-wrap: wrap;
 }
 
-.metrics-query input{
+.metrics-query input,.formula-box input{
     color: var(--text-color) !important;
     outline: none;
     border-radius: 0;
 }
 
-.metrics-query .formula{
+.formula-box .formula{
     width: 200px;
     border-radius: 0 5px 5px 0;
-    cursor: pointer;
+}
+.formula-box .formula:focus{
+    border-radius: 0 5px 5px 0;
+}
+.formula-box .formula.error-border{
+    border: 1px solid #EB364B;
+    border-left: none ;
 }
 .formula-arrow{
+    cursor: pointer;
     border-radius: 5px 5px 0px 0px;
     background-color: var(--purple-2);
     color: var(--white);
@@ -214,7 +221,7 @@ input:checked + .slider:before {
     background-color: var(--drop-down-btn-bg-regular);
 }
 
-.metrics-query .remove-query{
+.metrics-query .remove-query, .formula-box .remove-query{
     border-radius: 18px;
     height: 18px;
     width: 18px;
@@ -228,8 +235,15 @@ input:checked + .slider:before {
     background: #656F76;
     font-weight: 600;
 }
-.metrics-query .remove-query:hover{
-    background: #FF0000;
+.metrics-query .remove-query.disabled,
+.metrics-query .remove-query.disabled:hover{
+    cursor: not-allowed;
+    background: #a0a4a6;
+}
+
+.metrics-query .remove-query:hover,
+.formula-box .remove-query:hover{
+    background: #EB364B;
     border-radius: 5px;
 }
 .metrics-graph-container {
@@ -390,18 +404,17 @@ input:checked + .slider:before {
     width: 1px;
 }
 
-#ui-id-1.ui-widget.ui-widget-content,
-#ui-id-2.ui-widget.ui-widget-content,
-#ui-id-3.ui-widget.ui-widget-content,
-#ui-id-4.ui-widget.ui-widget-content{
-    width: 84px !important;
-    min-width: 84px;
-    font-size: 12px;
-}
-#ui-id-1.ui-autocomplete > li > div,
-#ui-id-2.ui-autocomplete > li > div,
-#ui-id-3.ui-autocomplete > li > div,
-#ui-id-4.ui-autocomplete > li > div{
-    padding: 0px 9px;
-    height: 28px;
+.formula-error-message{
+    display: none;
+    background-color: #EB364B;
+    border-radius: 50%;
+    height: 16px;
+    width: 16px;
+    color: #fff;
+    font-weight: bolder;
+    justify-content: center;
+    position: absolute;
+    top: -6px;
+    right: -6px;
+    border: 1px solid #fff;
 }
