--- a/static/css/metrics-explorer.css
+++ b/static/css/metrics-explorer.css
@@ -69,6 +69,9 @@ input:checked + .slider:before {
 .graph-view-container .label{
     margin-left: 10px;
 }
+.metrics-query .query-box .options-container {
+    display: none;
+}
 
 /* Metrics Explorer */
 #metrics-container{
@@ -97,9 +100,16 @@ input:checked + .slider:before {
     justify-content: space-between;
     margin-top: 10px;
 }
-
+.metrics-query{
+    width: 100%;
+}
 .metrics-query .query-box{
+    align-items: flex-start;
+    width: 100%;
+}
+.metrics-query .query-box .query-builder{
     flex-wrap: wrap;
+    height: auto;
 }
 
 .metrics-query input,.formula-box input{
@@ -112,7 +122,7 @@ input:checked + .slider:before {
     width: 200px;
     border-radius: 0 5px 5px 0;
 }
-.formula-box .formula:focus{
+.formula-box .formula:focus,.raw-query input{
     border-radius: 0 5px 5px 0;
 }
 .formula-box .formula.error-border{
@@ -153,7 +163,6 @@ input:checked + .slider:before {
 
 .metrics-query .value-container{
     border-right: 1px solid var(--border-btn-color) !important;
-    border-radius: 0 5px 5px 0;
 }
 
 .metrics-query div .tag, .metrics-query div .value{
@@ -284,14 +293,16 @@ input:checked + .slider:before {
 .alias-box{
     margin-right: 10px;
 }
-.alias-box .as-btn,.metrics-raw-query{
+.alias-box .as-btn,.metrics-raw-query,
+.raw-query-btn{
     height: 32px;
     width: 38px;
     display: flex;
     justify-content: center;
     border-radius: 5px;
 }
-.alias-box .as-btn:hover,.metrics-raw-query:hover{
+.alias-box .as-btn:hover,.metrics-raw-query:hover,
+.raw-query-btn:hover{
     background-color: var(--purple-2);
     color: var(--white);
     cursor: pointer;
@@ -299,7 +310,7 @@ input:checked + .slider:before {
 
 .alias-filling-box div{
     border: 1px solid var(--border-btn-color);
-    height: 32px;
+    height: 30px;
     width: 46px;
     display: flex;
     justify-content: center;
@@ -420,4 +431,56 @@ input:checked + .slider:before {
     top: -6px;
     right: -6px;
     border: 1px solid #fff;
+}
+.show-functions{
+    border-right: 1px solid var(--border-btn-color) !important;
+    cursor: pointer;
+    position: relative;
+    border-radius: 0 5px 5px 0;
+}
+.show-functions img{
+    height: 14px;
+}
+
+.functions-container{
+    border :none !important;
+    position: relative;
+}
+
+.functions-container::before {
+    left: -7px;
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    margin-top: -2px;
+    border-bottom: 3px solid var(--border-btn-color);
+    width: 12px;
+    margin-left: 7px;
+
+}
+.selected-function .close{
+    font-size: 22px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-left: 12px;
+    margin-bottom: 3px;
+}
+.position-container ,.all-selected-functions,.query-builder,.raw-query{
+    position: relative;
+    padding: 0px !important;
+    border: none !important;
+}
+.options-container {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    min-width: 257px;
+    padding: 0 !important;
+    border:none !important;
+    z-index: 999;
+}
+.raw-query{
+    width: 80%;
+    
 }
