--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -3075,8 +3075,8 @@ float: right;
 }
 
 .panel {
-    width: 49%;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     background-color: var(--datatable-bg-color);
     border-radius: 5px;
 }
