--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -3752,12 +3752,10 @@ float: right;
 #viewPanel-container {
     display: none;
     flex-direction: column;
-    max-height: 100vh;
     width: 100%;
-    height: 100%;
+    height: 500px;
     position: relative;
-    padding: 1em 0;
-    padding-left: 0px;
+    padding: 20px;
 }
 
 /* ORG SIGNUP FORM */
